examples/test/testpolicy1791.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1791
  namespace: namespace44
spec:
  podSelector:
    matchLabels:
      key21: value36
      key27: value13
      key37: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value28
      podSelector:
        matchLabels:
          key18: value39
          key21: value4
